--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\BobStateMachine\BobAnimatorFSM.cs" />
      <Compile Include="Assets\BobStateMachine\BobAnimatorState.cs" />
      <Compile Include="Assets\BobStateMachine\BobFSM.cs" />
      <Compile Include="Assets\BobStateMachine\BobState.cs" />
