--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,15 +46,15 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\BobStateMachine\BobAnimatorFSM.cs" />
-     <Compile Include="Assets\BobStateMachine\BobAnimatorFSMData.cs" />
-     <Compile Include="Assets\BobStateMachine\BobAnimatorState.cs" />
-     <Compile Include="Assets\BobStateMachine\BobAnimatorTransition.cs" />
-     <Compile Include="Assets\BobStateMachine\BobFSM.cs" />
-     <Compile Include="Assets\BobStateMachine\BobState.cs" />
-     <Compile Include="Assets\BobStateMachine\BobStateMachineRoot.cs" />
-     <Compile Include="Assets\BobStateMachine\BobTransition.cs" />
-     <Compile Include="Assets\BobStateMachine\BobUtils\BobDictionary.cs" />
+     <Compile Include="Assets\BobStateMachineTest\BobAnimatorFSM.cs" />
+     <Compile Include="Assets\BobStateMachineTest\BobAnimatorFSMData.cs" />
+     <Compile Include="Assets\BobStateMachineTest\BobAnimatorState.cs" />
+     <Compile Include="Assets\BobStateMachineTest\BobAnimatorTransition.cs" />
+     <Compile Include="Assets\BobStateMachineTest\BobFSM.cs" />
+     <Compile Include="Assets\BobStateMachineTest\BobState.cs" />
+     <Compile Include="Assets\BobStateMachineTest\BobStateMachineRoot.cs" />
+     <Compile Include="Assets\BobStateMachineTest\BobTransition.cs" />
+     <Compile Include="Assets\BobStateMachineTest\BobUtils\BobDictionary.cs" />
      <Compile Include="Assets\TestStateMachine\Scripts\TestDataSerializable.cs" />
      <Compile Include="Assets\fastJSON\testJSON.cs" />
  <Reference Include="fastJSON">
